--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "serve": "parcel ./source/index.html -p 4200 --open",
-    "build": "parcel build ./source/index.html"
+    "build": "parcel build ./source/index.html --no-source-maps"
   },
   "repository": {
     "type": "git",
